--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@
     margin-bottom: 1rem;
     display:grid;
     grid-template-columns: 1fr 1fr;
-    
     justify-content: space-evenly;
     font-size: 2.2rem;
     color:black;
@@ -101,6 +100,7 @@
     align-self: center;
     justify-content: center;
     border-radius: 0.5rem;
+    color:black;
     background:var(--shadow-color);
     /* height: 2rem; */
   }
