--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@
 
   .notice{
       display:flex;
+      flex-direction:row;
       font-family: sans-serif;
       margin:1rem;
-      padding:0rem 0.5rem 1rem ;
+      padding:0rem 0.5rem 0.5rem ;
       font-size:1.4rem;
       border:1px solid; 
       color:var(--notice);
@@ -68,8 +69,8 @@
 
   p{
     font-family: sans-serif;
-    margin:0;
-    padding:0;
+    /* margin:0; */
+    /* padding:0; */
   }
 
   .dob_area, .lucky_area{
@@ -77,6 +78,7 @@
     margin-bottom: 1rem;
     display:grid;
     grid-template-columns: 1fr 1fr;
+    
     justify-content: space-evenly;
     font-size: 2.2rem;
     color:black;
@@ -100,7 +102,6 @@
     align-self: center;
     justify-content: center;
     border-radius: 0.5rem;
-    color:black;
     background:var(--shadow-color);
     /* height: 2rem; */
   }
@@ -206,4 +207,15 @@
 
 .social {
     padding : 0.35rem 0.35rem;
+}
+
+@media screen and (max-width: 600px){
+  .main_container{
+    padding: 1rem;
+  }
+
+  h1{
+    font-size:3.5rem;
+    margin:0.2rem;
+  }
 }
